tests/baselines/reference/nodeModulesForbidenSyntax(module=node12).errors.txt
error TS4124: Compiler option 'module' of value 'node12' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.cts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/index.cts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/index.cts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/index.mts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/index.mts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/index.mts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder/index.cts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder/index.cts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder/index.cts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder/index.mts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder/index.mts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder/index.mts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/another/index.cts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder2/another/index.cts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/another/index.cts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/another/index.mts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder2/another/index.mts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/another/index.mts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/index.cts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder2/index.cts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/index.cts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/index.mts(2,12): error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
tests/cases/conformance/node/subfolder2/index.mts(2,20): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
tests/cases/conformance/node/subfolder2/index.mts(2,23): error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.


!!! error TS4124: Compiler option 'module' of value 'node12' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/subfolder/index.ts (0 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
    export {x};
==== tests/cases/conformance/node/subfolder/index.cts (3 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/subfolder/index.mts (3 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/subfolder2/index.ts (0 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
    export {x};
==== tests/cases/conformance/node/subfolder2/index.cts (3 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/subfolder2/index.mts (3 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/subfolder2/another/index.ts (0 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
    export {x};
==== tests/cases/conformance/node/subfolder2/another/index.mts (3 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/subfolder2/another/index.cts (3 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/index.mts (3 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/index.cts (3 errors) ====
    // cjs format file
    const x = <T>() => <T><any>(void 0);
               ~
!!! error TS7060: This syntax is reserved in files with the .mts or .cts extension. Add a trailing comma or explicit constraint.
                       ~~~~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
                          ~~~~~~~~~~~~~
!!! error TS7059: This syntax is reserved in files with the .mts or .cts extension. Use an `as` expression instead.
    export {x};
==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    const x = <T>() => <T><any>(void 0);
    export {x};
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }
==== tests/cases/conformance/node/subfolder2/package.json (0 errors) ====
    {
    }
==== tests/cases/conformance/node/subfolder2/another/package.json (0 errors) ====
    {
        "type": "module"
    }